[package]
name = "torii-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
futures-util = "0.3.31"
mcp-sdk = { git = "https://github.com/AntigmaLabs/mcp-sdk", rev = "3403090" }
mcp_rust_sdk = "0.1.1"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
